# ChangeLog for games-simulation/corewars
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-simulation/corewars/Attic/ChangeLog,v 1.6 2004/12/28 23:35:50 ciaranm Exp $

  28 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  corewars-0.9.12.ebuild, corewars-0.9.13-r1.ebuild, corewars-0.9.13.ebuild:
  virtual/glibc -> virtual/libc

*corewars-0.9.13-r1 (02 Feb 2004)

  02 Feb 2004; Michael Sterrett <mr_bones_@gentoo.org>
  corewars-0.9.13-r1.ebuild:
  use games eclass

  12 Jul 2003; Michael Sterrett <msterret@gentoo.org> corewars-0.9.12.ebuild,
  corewars-0.9.13.ebuild:
  fix DESCRIPTION

*corewars-0.9.13 (05 Jun 2003)

  05 Jun 2003; Martin Holzer <mholzer@gentoo.org> corewars-0.9.13.ebuild:
  Version bumped. closes #20332.

  06 Dec 2003; Mark Guertin <gerk@gentoo.org> :
  Added ~ppc to keywords

*corewars-0.9.12 (14 April 2002)

  17 jul 2002; Jose Alberto Suárez López <bass@gentoo.org> corewars-0.9.12.ebuild :
  Added LICENSE, KEYWORDS, SLOT.

  14 April 2002; Bart Verwilst <verwilst@gentoo.org> Changelog :

  Initial ebuild, SLOT'ified.. Enjoy!
