@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-simulation/corewars/Attic/corewars-0.9.12.ebuild,v 1.5 2004/07/14 14:58:38 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-simulation/corewars/Attic/corewars-0.9.12.ebuild,v 1.6 2005/06/15 19:09:51 wolf31o2 Exp $
 
 DESCRIPTION="Simulation game involving virtual machine code"
 SRC_URI="mirror://sourceforge/corewars/${P}.tar.gz"
@@ -31,5 +31,5 @@ src_install() {
 		infodir=${D}/usr/share/info \
 		install || die
 
-	dodoc ChangeLog COPYING README TODO DIFFERENCES INTERESTING-COMBINATIONS
+	dodoc ChangeLog README TODO DIFFERENCES INTERESTING-COMBINATIONS
 }
