@@ -1,6 +1,10 @@
 # ChangeLog for games-simulation/corewars
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-simulation/corewars/Attic/ChangeLog,v 1.6 2004/12/28 23:35:50 ciaranm Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-simulation/corewars/Attic/ChangeLog,v 1.7 2005/06/15 19:09:51 wolf31o2 Exp $
+
+  15 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  corewars-0.9.12.ebuild, corewars-0.9.13.ebuild:
+  Removed COPYING file.
 
   28 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
   Change encoding to UTF-8 for GLEP 31 compliance
